Refactor according to Dmitry's comments.